--- a/Experimental/ML.ipynb
+++ b/Experimental/ML.ipynb
@@ -351,7 +351,7 @@
    "source": [
     "\n",
     "\n",
-    "train_X, test_X, train_y, test_y = train_test_split(subX.reshape((len(subX),-1)), y, test_size=0.6, random_state=np.random.randint(0,100))\n",
+    "train_X, test_X, train_y, test_y = train_test_split(subX.reshape((len(subX),-1)), y, test_size=0.2, random_state=np.random.randint(0,100))\n",
     "\n",
     "svm_model = SVC(decision_function_shape='ovo')\n",
     "# Train the SVM model\n",
@@ -360,7 +360,10 @@
     "y_pred = svm_model.predict(test_X)\n",
     "\n",
     "accuracy = accuracy_score(test_y, y_pred)\n",
-    "print(accuracy * 100, \"%\")"
+    "print(\"Test\",accuracy * 100, \"%\")\n",
+    "y_pred = svm_model.predict(test_X)\n",
+    "accuracy = accuracy_score(train_y, y_pred)\n",
+    "print(\"Train\",accuracy * 100, \"%\")"
    ]
   },
   {
@@ -381,7 +384,10 @@
     "clf.fit(train_X, train_y)\n",
     "y_pred = clf.predict(test_X)\n",
     "accuracy = accuracy_score(test_y, y_pred)\n",
-    "print(accuracy * 100, \"%\")\n"
+    "print(\"Test\",accuracy * 100, \"%\")\n",
+    "y_pred = clf.predict(test_X)\n",
+    "accuracy = accuracy_score(train_y, y_pred)\n",
+    "print(\"Train\",accuracy * 100, \"%\")"
    ]
   },
   {
@@ -405,6 +411,33 @@
     "\n",
     "plt.imshow(X[np.random.randint(0,500)])\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "def testCNN(train_X,train_y):\n",
+    "    y_cat = to_categorical(y)\n",
+    "    #train_X, test_X, train_y, test_y = train_test_split(dataX.reshape((*dataX.shape,1)), datay, test_size=0.2, random_state=np.random.randint(0,100))\n",
+    "    model = Sequential([\n",
+    "        Conv2D(32, (3,3), activation='relu', input_shape=(train_X.shape[1:])),\n",
+    "        MaxPooling2D((2,2)),\n",
+    "        Conv2D(64, (3,3), activation='relu'),\n",
+    "        MaxPooling2D((2,2)),\n",
+    "        Flatten(),\n",
+    "        Dense(128, activation='relu'),\n",
+    "        Dense(train_y.shape[1], activation='softmax')  # number of classes\n",
+    "    ])\n",
+    "    model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "    history = model.fit(train_X, train_y, epochs=100, batch_size=32, validation_data=(test_X, test_y))\n",
+    "    return model"
    ]
   },
   {
@@ -471,7 +504,153 @@
       "Epoch 27/100\n",
       "12/12 [==============================] - 14s 1s/step - loss: 0.3729 - accuracy: 0.8944 - val_loss: 0.3656 - val_accuracy: 0.8722\n",
       "Epoch 28/100\n",
-      "10/12 [========================>.....] - ETA: 1s - loss: 0.3338 - accuracy: 0.9000"
+      "12/12 [==============================] - 10s 899ms/step - loss: 0.3288 - accuracy: 0.9000 - val_loss: 0.3293 - val_accuracy: 0.9056\n",
+      "Epoch 29/100\n",
+      "12/12 [==============================] - 12s 977ms/step - loss: 0.3683 - accuracy: 0.8722 - val_loss: 0.3071 - val_accuracy: 0.9130\n",
+      "Epoch 30/100\n",
+      "12/12 [==============================] - 12s 1s/step - loss: 0.2740 - accuracy: 0.9194 - val_loss: 0.4576 - val_accuracy: 0.8500\n",
+      "Epoch 31/100\n",
+      "12/12 [==============================] - 11s 921ms/step - loss: 0.3055 - accuracy: 0.8917 - val_loss: 0.3514 - val_accuracy: 0.9056\n",
+      "Epoch 32/100\n",
+      "12/12 [==============================] - 14s 1s/step - loss: 0.2799 - accuracy: 0.9083 - val_loss: 0.3921 - val_accuracy: 0.8889\n",
+      "Epoch 33/100\n",
+      "12/12 [==============================] - 12s 1000ms/step - loss: 0.2368 - accuracy: 0.9333 - val_loss: 0.4154 - val_accuracy: 0.8463\n",
+      "Epoch 34/100\n",
+      "12/12 [==============================] - 14s 1s/step - loss: 0.3077 - accuracy: 0.9056 - val_loss: 0.2404 - val_accuracy: 0.9463\n",
+      "Epoch 35/100\n",
+      "12/12 [==============================] - 10s 878ms/step - loss: 0.2130 - accuracy: 0.9361 - val_loss: 0.4006 - val_accuracy: 0.8741\n",
+      "Epoch 36/100\n",
+      "12/12 [==============================] - 10s 894ms/step - loss: 0.2553 - accuracy: 0.9083 - val_loss: 0.2640 - val_accuracy: 0.9148\n",
+      "Epoch 37/100\n",
+      "12/12 [==============================] - 9s 793ms/step - loss: 0.2460 - accuracy: 0.9167 - val_loss: 0.2131 - val_accuracy: 0.9407\n",
+      "Epoch 38/100\n",
+      "12/12 [==============================] - 10s 862ms/step - loss: 0.1918 - accuracy: 0.9528 - val_loss: 0.2088 - val_accuracy: 0.9278\n",
+      "Epoch 39/100\n",
+      "12/12 [==============================] - 10s 879ms/step - loss: 0.1787 - accuracy: 0.9583 - val_loss: 0.3914 - val_accuracy: 0.8259\n",
+      "Epoch 40/100\n",
+      "12/12 [==============================] - 9s 795ms/step - loss: 0.2404 - accuracy: 0.9222 - val_loss: 0.2550 - val_accuracy: 0.9074\n",
+      "Epoch 41/100\n",
+      "12/12 [==============================] - 10s 873ms/step - loss: 0.2342 - accuracy: 0.9000 - val_loss: 0.3011 - val_accuracy: 0.9074\n",
+      "Epoch 42/100\n",
+      "12/12 [==============================] - 10s 824ms/step - loss: 0.2295 - accuracy: 0.9139 - val_loss: 0.3323 - val_accuracy: 0.8704\n",
+      "Epoch 43/100\n",
+      "12/12 [==============================] - 13s 1s/step - loss: 0.2068 - accuracy: 0.9306 - val_loss: 0.2461 - val_accuracy: 0.9315\n",
+      "Epoch 44/100\n",
+      "12/12 [==============================] - 12s 1s/step - loss: 0.1790 - accuracy: 0.9278 - val_loss: 0.2918 - val_accuracy: 0.8833\n",
+      "Epoch 45/100\n",
+      "12/12 [==============================] - 10s 838ms/step - loss: 0.2158 - accuracy: 0.9167 - val_loss: 0.2250 - val_accuracy: 0.9574\n",
+      "Epoch 46/100\n",
+      "12/12 [==============================] - 10s 852ms/step - loss: 0.1747 - accuracy: 0.9417 - val_loss: 0.1903 - val_accuracy: 0.9333\n",
+      "Epoch 47/100\n",
+      "12/12 [==============================] - 12s 1s/step - loss: 0.1542 - accuracy: 0.9611 - val_loss: 0.1995 - val_accuracy: 0.9259\n",
+      "Epoch 48/100\n",
+      "12/12 [==============================] - 9s 781ms/step - loss: 0.1366 - accuracy: 0.9750 - val_loss: 0.2500 - val_accuracy: 0.8944\n",
+      "Epoch 49/100\n",
+      "12/12 [==============================] - 10s 891ms/step - loss: 0.1449 - accuracy: 0.9472 - val_loss: 0.1768 - val_accuracy: 0.9519\n",
+      "Epoch 50/100\n",
+      "12/12 [==============================] - 10s 853ms/step - loss: 0.1408 - accuracy: 0.9556 - val_loss: 0.2993 - val_accuracy: 0.8704\n",
+      "Epoch 51/100\n",
+      "12/12 [==============================] - 10s 872ms/step - loss: 0.1953 - accuracy: 0.9306 - val_loss: 0.2484 - val_accuracy: 0.9056\n",
+      "Epoch 52/100\n",
+      "12/12 [==============================] - 10s 836ms/step - loss: 0.1592 - accuracy: 0.9528 - val_loss: 0.1980 - val_accuracy: 0.9444\n",
+      "Epoch 53/100\n",
+      "12/12 [==============================] - 11s 900ms/step - loss: 0.1227 - accuracy: 0.9750 - val_loss: 0.1595 - val_accuracy: 0.9593\n",
+      "Epoch 54/100\n",
+      "12/12 [==============================] - 10s 837ms/step - loss: 0.1157 - accuracy: 0.9778 - val_loss: 0.2373 - val_accuracy: 0.9185\n",
+      "Epoch 55/100\n",
+      "12/12 [==============================] - 10s 856ms/step - loss: 0.1272 - accuracy: 0.9694 - val_loss: 0.2494 - val_accuracy: 0.9093\n",
+      "Epoch 56/100\n",
+      "12/12 [==============================] - 10s 807ms/step - loss: 0.1293 - accuracy: 0.9611 - val_loss: 0.2863 - val_accuracy: 0.8944\n",
+      "Epoch 57/100\n",
+      "12/12 [==============================] - 10s 822ms/step - loss: 0.1596 - accuracy: 0.9444 - val_loss: 0.3268 - val_accuracy: 0.8815\n",
+      "Epoch 58/100\n",
+      "12/12 [==============================] - 9s 797ms/step - loss: 0.1500 - accuracy: 0.9389 - val_loss: 0.3141 - val_accuracy: 0.8833\n",
+      "Epoch 59/100\n",
+      "12/12 [==============================] - 10s 866ms/step - loss: 0.1377 - accuracy: 0.9639 - val_loss: 0.1779 - val_accuracy: 0.9333\n",
+      "Epoch 60/100\n",
+      "12/12 [==============================] - 10s 812ms/step - loss: 0.1612 - accuracy: 0.9556 - val_loss: 0.1710 - val_accuracy: 0.9463\n",
+      "Epoch 61/100\n",
+      "12/12 [==============================] - 10s 834ms/step - loss: 0.1499 - accuracy: 0.9472 - val_loss: 0.2211 - val_accuracy: 0.9167\n",
+      "Epoch 62/100\n",
+      "12/12 [==============================] - 10s 846ms/step - loss: 0.0935 - accuracy: 0.9750 - val_loss: 0.1451 - val_accuracy: 0.9574\n",
+      "Epoch 63/100\n",
+      "12/12 [==============================] - 10s 852ms/step - loss: 0.0946 - accuracy: 0.9778 - val_loss: 0.1955 - val_accuracy: 0.9167\n",
+      "Epoch 64/100\n",
+      "12/12 [==============================] - 10s 865ms/step - loss: 0.0956 - accuracy: 0.9750 - val_loss: 0.2153 - val_accuracy: 0.9222\n",
+      "Epoch 65/100\n",
+      "12/12 [==============================] - 13s 1s/step - loss: 0.1114 - accuracy: 0.9722 - val_loss: 0.1871 - val_accuracy: 0.9481\n",
+      "Epoch 66/100\n",
+      "12/12 [==============================] - 9s 804ms/step - loss: 0.0948 - accuracy: 0.9778 - val_loss: 0.1924 - val_accuracy: 0.9352\n",
+      "Epoch 67/100\n",
+      "12/12 [==============================] - 9s 806ms/step - loss: 0.1222 - accuracy: 0.9667 - val_loss: 0.3121 - val_accuracy: 0.8704\n",
+      "Epoch 68/100\n",
+      "12/12 [==============================] - 10s 837ms/step - loss: 0.3893 - accuracy: 0.8361 - val_loss: 0.3718 - val_accuracy: 0.8685\n",
+      "Epoch 69/100\n",
+      "12/12 [==============================] - 9s 781ms/step - loss: 0.2314 - accuracy: 0.9222 - val_loss: 0.2222 - val_accuracy: 0.9407\n",
+      "Epoch 70/100\n",
+      "12/12 [==============================] - 10s 826ms/step - loss: 0.1207 - accuracy: 0.9722 - val_loss: 0.2515 - val_accuracy: 0.9241\n",
+      "Epoch 71/100\n",
+      "12/12 [==============================] - 12s 1s/step - loss: 0.1167 - accuracy: 0.9694 - val_loss: 0.3375 - val_accuracy: 0.8833\n",
+      "Epoch 72/100\n",
+      "12/12 [==============================] - 10s 838ms/step - loss: 0.1304 - accuracy: 0.9611 - val_loss: 0.1776 - val_accuracy: 0.9426\n",
+      "Epoch 73/100\n",
+      "12/12 [==============================] - 9s 772ms/step - loss: 0.1135 - accuracy: 0.9639 - val_loss: 0.4391 - val_accuracy: 0.8370\n",
+      "Epoch 74/100\n",
+      "12/12 [==============================] - 10s 847ms/step - loss: 0.1416 - accuracy: 0.9472 - val_loss: 0.1808 - val_accuracy: 0.9352\n",
+      "Epoch 75/100\n",
+      "12/12 [==============================] - 10s 867ms/step - loss: 0.1125 - accuracy: 0.9583 - val_loss: 0.3924 - val_accuracy: 0.8463\n",
+      "Epoch 76/100\n",
+      "12/12 [==============================] - 12s 1s/step - loss: 0.1453 - accuracy: 0.9528 - val_loss: 0.1883 - val_accuracy: 0.9296\n",
+      "Epoch 77/100\n",
+      "12/12 [==============================] - 9s 798ms/step - loss: 0.0827 - accuracy: 0.9778 - val_loss: 0.2165 - val_accuracy: 0.9056\n",
+      "Epoch 78/100\n",
+      "12/12 [==============================] - 10s 817ms/step - loss: 0.2111 - accuracy: 0.9167 - val_loss: 0.2119 - val_accuracy: 0.9241\n",
+      "Epoch 79/100\n",
+      "12/12 [==============================] - 12s 1s/step - loss: 0.1338 - accuracy: 0.9667 - val_loss: 0.3350 - val_accuracy: 0.8926\n",
+      "Epoch 80/100\n",
+      "12/12 [==============================] - 9s 790ms/step - loss: 0.1317 - accuracy: 0.9389 - val_loss: 0.1566 - val_accuracy: 0.9519\n",
+      "Epoch 81/100\n",
+      "12/12 [==============================] - 10s 812ms/step - loss: 0.0922 - accuracy: 0.9778 - val_loss: 0.1112 - val_accuracy: 0.9667\n",
+      "Epoch 82/100\n",
+      "12/12 [==============================] - 9s 790ms/step - loss: 0.1039 - accuracy: 0.9667 - val_loss: 0.1553 - val_accuracy: 0.9574\n",
+      "Epoch 83/100\n",
+      "12/12 [==============================] - 10s 839ms/step - loss: 0.1884 - accuracy: 0.9417 - val_loss: 0.1298 - val_accuracy: 0.9611\n",
+      "Epoch 84/100\n",
+      "12/12 [==============================] - 10s 862ms/step - loss: 0.0858 - accuracy: 0.9667 - val_loss: 0.1947 - val_accuracy: 0.9241\n",
+      "Epoch 85/100\n",
+      "12/12 [==============================] - 11s 915ms/step - loss: 0.0908 - accuracy: 0.9750 - val_loss: 0.1604 - val_accuracy: 0.9352\n",
+      "Epoch 86/100\n",
+      "12/12 [==============================] - 10s 813ms/step - loss: 0.0778 - accuracy: 0.9806 - val_loss: 0.1853 - val_accuracy: 0.9204\n",
+      "Epoch 87/100\n",
+      "12/12 [==============================] - 9s 793ms/step - loss: 0.0913 - accuracy: 0.9722 - val_loss: 0.1422 - val_accuracy: 0.9463\n",
+      "Epoch 88/100\n",
+      "12/12 [==============================] - 10s 858ms/step - loss: 0.0658 - accuracy: 0.9778 - val_loss: 0.1138 - val_accuracy: 0.9537\n",
+      "Epoch 89/100\n",
+      "12/12 [==============================] - 13s 1s/step - loss: 0.1158 - accuracy: 0.9528 - val_loss: 0.1412 - val_accuracy: 0.9519\n",
+      "Epoch 90/100\n",
+      "12/12 [==============================] - 12s 1s/step - loss: 0.1638 - accuracy: 0.9417 - val_loss: 0.2778 - val_accuracy: 0.8907\n",
+      "Epoch 91/100\n",
+      "12/12 [==============================] - 10s 832ms/step - loss: 0.1236 - accuracy: 0.9694 - val_loss: 0.1556 - val_accuracy: 0.9333\n",
+      "Epoch 92/100\n",
+      "12/12 [==============================] - 10s 847ms/step - loss: 0.0816 - accuracy: 0.9861 - val_loss: 0.1529 - val_accuracy: 0.9556\n",
+      "Epoch 93/100\n",
+      "12/12 [==============================] - 10s 843ms/step - loss: 0.0905 - accuracy: 0.9778 - val_loss: 0.2373 - val_accuracy: 0.9259\n",
+      "Epoch 94/100\n",
+      "12/12 [==============================] - 10s 866ms/step - loss: 0.5738 - accuracy: 0.7611 - val_loss: 0.3339 - val_accuracy: 0.8815\n",
+      "Epoch 95/100\n",
+      "12/12 [==============================] - 10s 857ms/step - loss: 0.1281 - accuracy: 0.9583 - val_loss: 0.2451 - val_accuracy: 0.9241\n",
+      "Epoch 96/100\n",
+      "12/12 [==============================] - 10s 837ms/step - loss: 0.0942 - accuracy: 0.9722 - val_loss: 0.1648 - val_accuracy: 0.9556\n",
+      "Epoch 97/100\n",
+      "12/12 [==============================] - 10s 845ms/step - loss: 0.0999 - accuracy: 0.9639 - val_loss: 0.1625 - val_accuracy: 0.9315\n",
+      "Epoch 98/100\n",
+      "12/12 [==============================] - 10s 839ms/step - loss: 0.1092 - accuracy: 0.9583 - val_loss: 0.1140 - val_accuracy: 0.9611\n",
+      "Epoch 99/100\n",
+      "12/12 [==============================] - 13s 1s/step - loss: 0.0617 - accuracy: 0.9833 - val_loss: 0.1457 - val_accuracy: 0.9444\n",
+      "Epoch 100/100\n",
+      "12/12 [==============================] - 10s 831ms/step - loss: 0.0528 - accuracy: 0.9889 - val_loss: 0.1251 - val_accuracy: 0.9500\n",
+      "17/17 [==============================] - 3s 177ms/step - loss: 0.1251 - accuracy: 0.9500\n",
+      "Test accuracy: 95.00%\n"
      ]
     }
    ],
@@ -494,7 +673,80 @@
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "history = model.fit(train_X, train_y, epochs=100, batch_size=32, validation_data=(test_X, test_y))\n",
     "loss, acc = model.evaluate(test_X, test_y)\n",
-    "print(f\"Test accuracy: {acc*100:.2f}%\")\n"
+    "print(f\"Test accuracy: {acc*100:.2f}%\")\n",
+    "model.save(\"/its/home/drs25/Documents/GitHub/3D-textures/Experimental/data/my_cnn_model.keras\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"/its/home/drs25/Documents/GitHub/3D-textures/Experimental/data/my_cnn_model.keras\") "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test all parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "unique_filament = dataset[\"Filament\"].unique()\n",
+    "unique_printer = dataset[\"Printer\"].unique()\n",
+    "n=len(unique_filament)*len(unique_printer)\n",
+    "matrix=np.zeros((n,n,20,2))\n",
+    "def getsubset(filament,printer):\n",
+    "    subset = dataset[(dataset['Filament'] == filament) & (dataset['Printer'] == printer)]\n",
+    "    subX=[]\n",
+    "    y=[]\n",
+    "    for _, row in subset.iterrows():\n",
+    "        # get the class label (e.g., from the 'Pattern' column)\n",
+    "        y.append(int(row['Pattern'].replace(\"z\",\"\")))\n",
+    "        # get the corresponding feature data (e.g., from column 14 to 25)\n",
+    "        subX.append(X[int(row['Index'])])\n",
+    "    y=np.array(y)\n",
+    "    subX=np.array(subX)\n",
+    "    return subX,y\n",
+    "def getallelse(filament,printer):\n",
+    "    subset = dataset[(dataset['Filament'] != filament) | (dataset['Printer'] != printer)]\n",
+    "    subX=[]\n",
+    "    y=[]\n",
+    "    for _, row in subset.iterrows():\n",
+    "        # get the class label (e.g., from the 'Pattern' column)\n",
+    "        y.append(int(row['Pattern'].replace(\"z\",\"\")))\n",
+    "        # get the corresponding feature data (e.g., from column 14 to 25)\n",
+    "        subX.append(X[int(row['Index'])])\n",
+    "    y=np.array(y)\n",
+    "    subX=np.array(subX)\n",
+    "    return subX,y\n",
+    "n=0\n",
+    "for filament in unique_filament:\n",
+    "    for printer in unique_printer:\n",
+    "        train_X,train_y=getsubset(filament,printer)\n",
+    "        m=0\n",
+    "        for filament_other in unique_filament:\n",
+    "            for printer_other in unique_printer:\n",
+    "                if not(filament==filament_other and printer==printer_other): #make sure it is not trained on itself\n",
+    "                    test_X,test_y=getsubset(filament_other,printer_other)\n",
+    "                    for i in range(20):\n",
+    "                        model=testCNN(train_X,train_y)\n",
+    "                        loss, acc = model.evaluate(test_X, test_y)\n",
+    "                        matrix[n][m][i][0]=acc\n",
+    "                        loss, acc = model.evaluate(train_X, train_y)\n",
+    "                        matrix[n][m][i][1]=acc\n",
+    "                m+=1\n",
+    "        n+=1"
    ]
   },
   {
@@ -512,6 +764,13 @@
    "source": [
     "## Section C - Visualise"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
