--- a/Experimental/ML.ipynb
+++ b/Experimental/ML.ipynb
@@ -730,9 +730,10 @@
     "    y=np.array(y)\n",
     "    subX=np.array(subX)\n",
     "    return subX,y\n",
+    "\n",
     "n=0\n",
     "for filament in unique_filament:\n",
-    "    for printer in unique_printer:\n",
+    "    for printer in unique_printer: #loop through al permutations\n",
     "        train_X,train_y=getsubset(filament,printer)\n",
     "        m=0\n",
     "        for filament_other in unique_filament:\n",
@@ -746,7 +747,9 @@
     "                        loss, acc = model.evaluate(train_X, train_y)\n",
     "                        matrix[n][m][i][1]=acc\n",
     "                m+=1\n",
-    "        n+=1"
+    "                \n",
+    "        n+=1\n",
+    "np.save(path_to_file,matrix)"
    ]
   },
   {
