--- a/Experimental/ML.ipynb
+++ b/Experimental/ML.ipynb
@@ -12,21 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/its/home/drs25/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/dextershepherd/3d-printed-tactile-dataset-tactip-readings?dataset_version_number=2...\n"
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.12), please consider upgrading to the latest version (0.3.13).\n",
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/dextershepherd/3d-printed-tactile-dataset-tactip-readings?dataset_version_number=4...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 454M/454M [00:10<00:00, 45.3MB/s] "
+      "100%|██████████| 2.40G/2.40G [00:55<00:00, 46.3MB/s]"
      ]
     },
     {
@@ -47,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/its/home/drs25/.cache/kagglehub/datasets/dextershepherd/3d-printed-tactile-dataset-tactip-readings/versions/2\n"
+      "/its/home/drs25/.cache/kagglehub/datasets/dextershepherd/3d-printed-tactile-dataset-tactip-readings/versions/4\n"
      ]
     }
    ],
@@ -57,6 +66,17 @@
     "\n",
     "pathA = kagglehub.dataset_download(\"dextershepherd/3d-printed-tactile-dataset-tactip-readings\")\n",
     "print(pathA)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "result = subprocess.run([\"mv\", pathA, \"/mnt/data0/drs25/data/\"], capture_output=True, text=True)\n",
+    "pathA=\"/mnt/data0/drs25/data/\""
    ]
   },
   {
@@ -792,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
