--- a/Experimental/all_the_same.ipynb
+++ b/Experimental/all_the_same.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import numpy as np \n",
     "import pandas as pd \n",
     "import cv2 \n",
-    "import os"
+    "import os\n"
    ]
   },
   {
@@ -543,16 +543,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data(dataset,X,num=-1,augment=False):\n",
+    "def get_data(dataset,X,num=-1,augment=False,sobel=True):\n",
     "    subset = dataset[((dataset['Printer'] == \"bambu\") & (dataset['Filament']==\"plaminus\")) ]\n",
     "    subX, y = [], []\n",
     "    for _, row in subset.iterrows():\n",
-    "        image=X[_]\n",
+    "        image=X[_][0]\n",
     "        label=int(row['Pattern'].split(\".\")[0].replace(\"z\", \"\"))\n",
+    "        if sobel:\n",
+    "            # Apply Sobel filter (on grayscale if not already)\n",
+    "            if len(image.shape) == 3:  # convert to grayscale if it's RGB\n",
+    "                roi_gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "            else:\n",
+    "                roi_gray = image\n",
+    "\n",
+    "            sobelx = cv2.Sobel(roi_gray, cv2.CV_64F, 1, 0, ksize=3)\n",
+    "            sobely = cv2.Sobel(roi_gray, cv2.CV_64F, 0, 1, ksize=3)\n",
+    "\n",
+    "            sobel_ = np.hypot(sobelx, sobely)  # magnitude\n",
+    "            image = cv2.convertScaleAbs(sobel_)  # scale back to uint8\n",
     "        if num==-1:\n",
     "            y.append(label)\n",
     "            subX.append(image)\n",
@@ -564,12 +576,12 @@
     "    subX,y=np.array(subX),np.array(y)\n",
     "    if augment:\n",
     "        noisy=subX+np.random.normal(0,5,subX.shape)\n",
-    "        light=subX-10\n",
-    "        dark=subX+10\n",
-    "        light[light<0]=0\n",
-    "        dark[dark>255]=255\n",
-    "        subX=np.concatenate([subX,noisy,light,dark])\n",
-    "        y=np.concatenate([y,y,y,y])\n",
+    "        #light=subX-10\n",
+    "        #dark=subX+10\n",
+    "        #light[light<0]=0\n",
+    "        #dark[dark>255]=255\n",
+    "        subX=np.concatenate([subX,noisy])\n",
+    "        y=np.concatenate([y,y])\n",
     "    assert len(subX)==len(y) \n",
     "    return subX,y\n",
     "\n",
@@ -644,15 +656,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(500, 1, 192, 256) (1200, 1, 192, 256) (1800, 1, 192, 256) (500,) (1200,) (1800,)\n",
-      "(500, 49152) (1200, 49152) (500,) (1200,)\n"
+      "(500, 192, 256) (600, 192, 256) (1800, 192, 256) (500,) (600,) (1800,)\n",
+      "(500, 49152) (600, 49152) (500,) (600,)\n",
+      "Other 54.893478260869564 % 1.3422377134453813\n",
+      "Train 100.0 % 0.0\n",
+      "Test 99.83333333333334 % 0.41499665326629\n"
      ]
     }
    ],
@@ -675,15 +690,25 @@
     "#Z_test=coral_align_target_to_source(Z_train, Z_test)\n",
     "#selet just one and train classifier\n",
     "acc=np.zeros((20))\n",
+    "train=np.zeros((20))\n",
+    "test=np.zeros((20))\n",
     "for i in range(20):\n",
-    "    clf = RandomForestClassifier(max_depth=100, random_state=np.random.randint(0,100))\n",
-    "    clf.fit(Z_train, y_2)\n",
-    "\n",
+    "    clf = RandomForestClassifier(max_depth=50, random_state=np.random.randint(0,100))\n",
+    "    train_X, test_X, train_y, test_y = train_test_split(Z_train,y_2)\n",
+    "    clf.fit(train_X, train_y)\n",
+    "    y_pred = clf.predict(train_X)\n",
+    "    accuracy = accuracy_score(train_y, y_pred)\n",
+    "    train[i]=accuracy*100\n",
+    "    y_pred = clf.predict(test_X)\n",
+    "    accuracy = accuracy_score(test_y, y_pred)\n",
+    "    test[i]=accuracy*100\n",
     "    # select all the others and test classifier\n",
     "    y_pred = clf.predict(Z_test)\n",
     "    accuracy = accuracy_score(y_, y_pred)\n",
     "    acc[i]=accuracy*100\n",
-    "print(\"Test\",np.mean(acc), \"%\")"
+    "print(\"Other\",np.mean(acc), \"%\",np.std(acc))\n",
+    "print(\"Train\",np.mean(train), \"%\",np.std(train))\n",
+    "print(\"Test\",np.mean(test), \"%\",np.std(test))"
    ]
   },
   {
@@ -721,6 +746,217 @@
     "plt.title(\"Confusion Matrix\")\n",
     "plt.savefig(\"/its/home/drs25/3D-textures/assets/confusion_RFC_samePF.pdf\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import gc\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "class SimpleANN(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "        super(SimpleANN, self).__init__()\n",
+    "        # Input layer to hidden layer\n",
+    "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
+    "        # Hidden layer to hidden layer (optional)\n",
+    "        self.fc2 = nn.Linear(hidden_size, hidden_size)\n",
+    "        # Hidden layer to output layer\n",
+    "        self.fc3 = nn.Linear(hidden_size, output_size)\n",
+    "        self.relu = nn.ReLU()\n",
+    "    def forward(self, x):\n",
+    "        # Apply ReLU activation for hidden layers\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        # Output layer (no activation if using CrossEntropyLoss)\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "\n",
+    "def train_model(train_X, train_y, test_X, test_y, params, epochs=100, batch_size=32,arch=None,):\n",
+    "    # Permute to (N, C, H, W)\n",
+    "    # Convert to torch tensors\n",
+    "    train_X = torch.tensor(train_X, dtype=torch.float32)\n",
+    "    test_X = torch.tensor(test_X, dtype=torch.float32)\n",
+    "    train_y = torch.tensor(train_y)\n",
+    "    test_y = torch.tensor(test_y)\n",
+    "\n",
+    "    train_dataset = TensorDataset(train_X, train_y)\n",
+    "    test_dataset = TensorDataset(test_X, test_y)\n",
+    "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
+    "    test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
+    "\n",
+    "    model = arch(*params).to(device)\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "    # Training loop\n",
+    "    for epoch in range(epochs):\n",
+    "        #model.train()\n",
+    "        for X_batch, y_batch in train_loader:\n",
+    "            optimizer.zero_grad()\n",
+    "            X_batch=X_batch.to(device)\n",
+    "            outputs = model(X_batch)\n",
+    "            loss = criterion(outputs, y_batch.to(device))\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            torch.cuda.empty_cache()\n",
+    "        if epoch%500==0: print(\"Epoch\",epoch,\" loss:\",loss.item())\n",
+    "\n",
+    "    # Evaluate\n",
+    "    def evaluate(loader):\n",
+    "        model.eval()\n",
+    "        correct, total, running_loss = 0, 0, 0.0\n",
+    "        with torch.no_grad():\n",
+    "            for X_batch, y_batch in loader:\n",
+    "                outputs = model(X_batch.to(device))\n",
+    "                loss = criterion(outputs, y_batch.to(device))\n",
+    "                running_loss += loss.item()\n",
+    "                predicted = torch.argmax(outputs.cpu(), axis=1)\n",
+    "                correct += (predicted == torch.argmax(y_batch, axis=1)).sum().item()\n",
+    "                total += y_batch.size(0)\n",
+    "        return running_loss / len(loader), correct / total\n",
+    "\n",
+    "    test_loss, test_acc = evaluate(test_loader)\n",
+    "    train_loss, train_acc = evaluate(train_loader)\n",
+    "    return model, train_acc, test_acc\n",
+    "\n",
+    "# ------------------------------------------------------------------\n",
+    "# Dataset splitting helpers\n",
+    "# ------------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "def get_y(y, num_classes):\n",
+    "    unique_labels = np.arange(num_classes)\n",
+    "    label_map = {label: i for i, label in enumerate(unique_labels)}\n",
+    "    y_mapped = np.array([label_map.get(l, -1) for l in y])\n",
+    "    y_cat = np.eye(num_classes)[y_mapped]\n",
+    "    return y_cat\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500, 192, 256) (600, 192, 256) (1800, 192, 256) (500,) (600,) (1800,)\n",
+      "(500, 49152) (600, 49152) (500,) (600,)\n",
+      "Epoch 0  loss: 1.8007556051015854\n",
+      "Running avg: [1.         0.43173913]\n",
+      "Epoch 0  loss: 1.781571770707766\n",
+      "Running avg: [1.         0.42456522]\n",
+      "Epoch 0  loss: 1.7956984788179398\n",
+      "Running avg: [0.99888889 0.43072464]\n",
+      "Epoch 0  loss: 1.7953146547079086\n",
+      "Running avg: [0.99916667 0.43097826]\n",
+      "Epoch 0  loss: 1.8072201659282048\n",
+      "Running avg: [0.998      0.42869565]\n",
+      "Epoch 0  loss: 1.7933462113142014\n",
+      "Running avg: [0.99611111 0.42543478]\n",
+      "Epoch 0  loss: 1.7912725259860356\n",
+      "Running avg: [0.99619048 0.42627329]\n",
+      "Epoch 0  loss: 1.828715036312739\n",
+      "Running avg: [0.99625    0.42788043]\n",
+      "Epoch 0  loss: 1.8042692144711812\n",
+      "Running avg: [0.99666667 0.43275362]\n",
+      "Epoch 0  loss: 1.7926839540402093\n",
+      "Running avg: [0.99233333 0.42847826]\n",
+      "Epoch 0  loss: 1.8004229962825775\n",
+      "Running avg: [0.99272727 0.42849802]\n",
+      "Epoch 0  loss: 1.7976146737734475\n",
+      "Running avg: [0.99125    0.43289855]\n",
+      "Epoch 0  loss: 1.7679336915413537\n",
+      "Running avg: [0.99089744 0.43374582]\n",
+      "Epoch 0  loss: 1.8089757512013116\n",
+      "Running avg: [0.99154762 0.43378882]\n",
+      "Epoch 0  loss: 1.7907038231690724\n",
+      "Running avg: [0.99211111 0.43602899]\n",
+      "Epoch 0  loss: 1.791007399559021\n",
+      "Running avg: [0.99260417 0.4361413 ]\n",
+      "Epoch 0  loss: 1.7895957231521606\n",
+      "Running avg: [0.99235294 0.43122762]\n",
+      "Epoch 0  loss: 1.812206581234932\n",
+      "Running avg: [0.99222222 0.42995169]\n",
+      "Epoch 0  loss: 1.7762811332941055\n",
+      "Running avg: [0.99157895 0.43221968]\n",
+      "Epoch 0  loss: 1.7661733627319336\n",
+      "Running avg: [0.99183333 0.43369565]\n",
+      "[0.99183333 0.43369565]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "X_,y_=get_data(dataset,X)\n",
+    "X_2,y_2=get_data(bambu_dataset,bambu_X,num=1,augment=True)\n",
+    "X_3,y_3=get_data(bambu_dataset,bambu_X)\n",
+    "print(X_.shape,X_2.shape,X_3.shape,y_.shape,y_2.shape,y_3.shape)\n",
+    "X_=X_.reshape((len(X_),-1))\n",
+    "X_2=X_2.reshape((len(X_2),-1))\n",
+    "X_3=X_3.reshape((len(X_3),-1))\n",
+    "print(X_.shape,X_2.shape,y_.shape,y_2.shape)\n",
+    "pca = PCA(n_components=45).fit(X_2)\n",
+    "Z_train = pca.transform(X_2)  # (N,3)\n",
+    "Z_test = pca.transform(X_)\n",
+    "Z_test2 = pca.transform(X_3)\n",
+    "Z_test = np.concatenate([Z_test,Z_test2])\n",
+    "y_=np.concatenate([y_,y_3])\n",
+    "\n",
+    "acc=[]\n",
+    "for i in range(20):\n",
+    "    #train_X, test_X, train_y, test_y = train_test_split(Z_train.astype('float32'), y_2, test_size=0.2, random_state=np.random.randint(0,100))\n",
+    "    mean_train = Z_train.mean(axis=0)\n",
+    "    mean_other = Z_test.mean(axis=0)\n",
+    "    #Z_test = Z_test - (mean_other - mean_train)\n",
+    "    Z_train=(Z_train-np.min(Z_train))/(np.max(Z_train)-np.min(Z_train))\n",
+    "    Z_test=(Z_test-np.min(Z_test))/(np.max(Z_test)-np.min(Z_test))\n",
+    "    model, train_acc, test_acc = model, train_acc, test_acc = train_model(\n",
+    "                                Z_train.astype('float32'), get_y(y_2,6), Z_test.astype('float32'), get_y(y_,6), (Z_train.shape[1],50,6), epochs=200,batch_size=64, arch=SimpleANN)\n",
+    "    torch.cuda.empty_cache()\n",
+    "    acc.append([train_acc,test_acc])   \n",
+    "    print(\"Running avg:\",np.average(np.array(acc),axis=0))  \n",
+    "acc=np.array(acc)\n",
+    "np.save(\"/its/home/drs25/3D-textures/Experimental/data/ANN_bambu_e200\",b)   \n",
+    "print(np.average(acc,axis=0))  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.99733333 0.24652174]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.average(acc,axis=0))  "
    ]
   }
  ],
